# python-project-52

./: .coverage  .gitignore  Dockerfile  Makefile  README.md  build.sh  coverage.xml  pyproject.toml
.github/workflows/: lint.yml  sonar.yml
task_manager/: mixins.py  settings.py  urls.py
task_manager/labels/: forms.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_label_created_at.py  0003_alter_label_created_at.py
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_task_labels.py
task_manager/templates/: base.html  home.html  label_confirm_delete.html  label_form.html  labels_list.html  login.html  status_confirm_delete.html  status_form.html  status_list.html  tasks_confirm_delete.html  tasks_detail.html  tasks_form.html  tasks_list.html  user_confirm_delete.html  user_form.html  user_list.html
task_manager/users/: forms.py  models.py  tests.py  urls.py  user_form.html  user_list.html  validators.py  views.py
task_manager/users/migrations/: 0001_initial.py
