[project]
name = "hexlet-code"
version = "0.1.0"
description = "Task Manager on Django"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=5.2",
    "gunicorn>=23.0.0",
    "python-dotenv>=1.1.0",
    "dj-database-url>=2.3.0",
    "psycopg[binary]",
    "django-bootstrap5>=25.1",
    "django-filter==25.1",
    "rollbar>=1.3.0",
    "ruff==0.8.1"
]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = ["migrations", "pycache"]

[tool.ruff.lint]
select = ["E", "F", "I"]  # ошибки, предупреждения, импорт

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
line-length = 88
target-version = ['py310']
exclude = '''
/(
    migrations
  | \.venv
  | __pycache__
)/
'''

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "task_manager.settings"
python_files = tests.py test_*.py *_tests.py
